# c-blosc

./: .gitignore  .lgtm.yml  .mailmap  .travis.yml  ANNOUNCE.rst  ANNOUNCE.txt  BUILD.bat  BUILD_BLOSC.bat  CLEAN_BUILD.bat  CMakeLists.txt  ConsolidateArtifacts.bat  GOVERNANCE.md  LICENSE.txt  POST_BUILD.bat  README-threaded.txt  README.md  README.rst  README.txt  README_HEADER.rst  README_THREADED.txt  RELEASE_NOTES.rst  RELEASE_NOTES.txt  RELEASING.rst  THANKS.rst  THOUGHTS_FOR_2.0.txt  TODO.txt  appveyor.yml  blosc.pc.in  build.py  cmake_config.cmake.in  code_of_conduct.md  conanbuild.py  conanfile.py  package.json  profile.txt  publish_package.sh
.github/workflows/: cmake.yml  fuzz.yml
LICENSES/: BLOSC.txt  SNAPPY_CMAKELISTS.txt
appveyor/: winrun.cmd
bench/: 32KB-block-24B-typesize.data  CMakeLists.txt  Makefile  Makefile.mingw  bench-sm.c  bench.c  plot-speeds.py
blosc/: CMakeLists.txt  avx2.c  bitshuffle-avx2.c  bitshuffle-generic.c  bitshuffle-generic.h  bitshuffle-sse2.c  bitshuffle-sse2.h  bitshuffle.c  bitshuffle.h  blosc-common.h  blosc-comp-features.h  blosc-export.h  blosc.c  blosc.h  blosclz.c  blosclz.h  blosclz_impl.inc  config.h.in  cstrings.c  cstrings.h  fastcopy.c  fastcopy.h  lz4.c  memcopy.h  shuffle-avx2.c  shuffle-avx2.h  shuffle-common.h  shuffle-generic.c  shuffle-generic.h  shuffle-sse2.c  shuffle-sse2.h  shuffle.c  shuffle.h  threading.h
blosc/win32/: pthread.c  pthread.h  threading.c
cmake/: CoverallsGenerateGcov.cmake  FindLIZARD.cmake  FindLZ4.cmake  FindSSE.cmake  FindSnappy.cmake  FindZlib.cmake  FindZstd.cmake  Lz4ExternalProject.cmake  SnappyExternalProject.cmake  snappy-CMakeLists.txt
compat/: CMakeLists.txt  blosc-1.17.1-bitshuffle4-memcpy.cdata  blosc-1.17.1-bitshuffle8-nomemcpy.cdata  blosc-1.18.0-bitshuffle4-memcpy.cdata  blosc-1.18.0-bitshuffle8-nomemcpy.cdata  filegen.c
examples/: many_compressors.c  multithread.c  noinit.c  simple.c  win-dynamic-linking.c
hdf5/: CMakeLists.txt  README.rst  README.txt  blosc_filter.c  example.c
internal-complibs/: CMakeLists.txt
internal-complibs/lizard-1.0/: Makefile  lizard_common.h  lizard_decompress.h  lizard_frame.c
internal-complibs/lizard-1.0/xxhash/: xxhash.h
internal-complibs/lz4-r113/: lz4.c  lz4.h  lz4hc.h
internal-complibs/snappy-1.1.1/: msvc.patch  snappy.h
internal-complibs/zlib-1.2.11/: gzguts.h
internal-complibs/zlib-1.2.8/: gzguts.h
internal-complibs/zlib-1.3.1/: gzguts.h
internal-complibs/zstd-1.1.2/dll/example/: fullbench-dll.vcxproj
python/: README.txt  VERSION  setup.py
python/blosc/: __init__.py  blosc_extension.c  toplevel.py
scripts/: install.sh  run.sh  travis-before-install.sh
src/: 128KB-block-16B-typesize.data  128KB-block-4B-typesize.data  16KB-block-8B-typesize.data  25Kelem-4B-typesize.data  bench-small-datafile.c  bench.c  blosc.c  blosc.h  blosclz.c  blosclz.h  shuffle.c  shuffle.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  Makefile  check_symbols.py  gcc-segfault-issue.c  test_all.sh  test_api.c  test_basics.c  test_bitshuffle_leftovers.c  test_blosc_corrupt.c  test_common.h  test_compress_roundtrip.c  test_compress_roundtrip.csv  test_compressor.c  test_forksafe.c  test_getitem.c  test_maxout.c  test_noinit.c  test_nolock.c  test_nthreads.c  test_shuffle.c  test_shuffle_roundtrip_avx2.c  test_shuffle_roundtrip_generic.c  test_shuffle_roundtrip_sse2.c
tests/fuzz/: fuzz_compress.c  fuzz_decompress.c
